# EAGER

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml
configs/circuits/: golden_micro_1.yaml  golden_micro_2.yaml  synthetic_n20_d3.yaml
configs/hardware/: golden_k2_det.yaml  k2_line.yaml  k4_grid.yaml
docs/: BASELINE_FIDELITY.md  DESIGN_DECISIONS.md  PHASE_STATUS.md  WALKTHROUGH.md  guide.md
experiments/: fig_ppo_stability.py  fig_regime_map.py  fig_seed_robustness.py  fig_zeroshot.py  phase2_panel.py  phase3_baselines.py  phase4_gurobi_gap.py  phase6_main_table.py  phase6_regime_grid.py  phase6_zeroshot.py  phase7_effect_sizes.py  phase7_multiseed.py  phase7_stochastic_gap.py  phase7_t5_ablation.py
qasm/: README.md
qasm/qasmbench/: SOURCE_COMMIT.txt
results/: index.json
scripts/: clean_state_verify.py  eval_agent_regimes.py  extract_qasm.py  make_showable_zip.py  record_traces.py  replay_trace.py  run_episode.py  run_repeat_suite.py  train_il.py  train_pathb.py  train_pathb_ddqn.py  train_ppo.py
src/eager/: __init__.py  circuit.py  config.py  smoke.py
tests/: conftest.py  util_invariants.py
tests/integration/: test_agent_pipeline.py  test_agg_pairs.py  test_auto_jit.py  test_crn_policies.py  test_determinism_process.py  test_expiry.py  test_golden_micro.py  test_greedy_jit.py  test_invariants.py  test_milp_golden.py  test_phase2_ordering.py  test_random_prog.py  test_traces.py
tests/statistical/: test_crn_frequency.py
tests/unit/: test_actions_masks.py  test_agg.py  test_circuit.py  test_config.py  test_crn.py  test_ddqn_flat.py  (+11 more)
(+52 files in other folders)
